--- a/src/components/BigCaption/BigCaption.module.scss
+++ b/src/components/BigCaption/BigCaption.module.scss
@@ -13,6 +13,11 @@
     text-transform: uppercase;
     margin-top: 100px;
     text-align: center;
+
+    @media (max-width: $tablet-width) {
+      margin-top: 30px;
+      font-size: 28px;
+    }
   }
 
   h2 {
@@ -21,5 +26,15 @@
     margin-top: 30px;
     text-transform: uppercase;
     text-align: center;
+  }
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
+
+  svg {
+    @media (max-width: $mobile-width) {
+      width: 220px;
+    }
   }
 }
