--- a/src/components/LaunchesList/LaunchesList.module.scss
+++ b/src/components/LaunchesList/LaunchesList.module.scss
@@ -11,5 +11,19 @@
   margin: 0;
   padding: 0;
   gap: 20px;
+
+  @media (max-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
+.count {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+
+  span {
+    opacity: 0.4;
+  }
+}
