--- a/src/components/UI/SortingPopover/SortingPopover.module.scss
+++ b/src/components/UI/SortingPopover/SortingPopover.module.scss
@@ -2,7 +2,11 @@
   display: flex;
   justify-content: flex-end;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 4px;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 20px;
+  }
 }
 
 .popoversContainer {
